fixed some styling issues to make it more readable

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,6 @@ img.my-picture:hover {
 
 a {
   color: #3c85ea;
-  text-shadow: 1px 1px #85ea3c;
   font-size: 20px;
   text-decoration: none;
 }
